# Interface

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
backend/app/: __init__.py  db.py  main.py  security.py  settings.py  time_utils.py
backend/migrations/: 001_initial.sql  002_procedure_alignment.sql  003_attempt_flow.sql  003_provider_cooldowns.sql  003_unique_participant_identity.sql  004_asr_attempts.sql  005_admin_controls.sql  006_clean_data_audits_attempt_scope.sql  007_external_operations.sql  008_cleanup_operations.sql  009_admin_login_security.sql  010_export_job_leases.sql  011_recruitment_control.sql  012_asr_result_references.sql  013_unified_recruitment.sql  014_error_semantic_evidence.sql  015_client_response_timing.sql
backend/tests/: audio_fixtures.py  conftest.py  test_admin_dashboard.py  test_admin_permissions.py  test_asr_policy.py  test_asr_tencent.py  test_assignment.py  test_attempts.py  test_backup_data.py  test_clean_data_audit.py  test_cleanup_attempts.py  test_client_response_timing.py  test_db_bootstrap.py  test_decision_artifacts.py  test_deployment_config.py  test_e2e_formal_short.py  test_e2e_long.py  test_error_condition_matrix.py  test_error_evidence_persistence.py  test_error_generation.py  test_error_injection.py  (+20 more)
deployment/: interface-v2.env.example  interface-v2.service
docs/: DATA_STRUCTURE.md  OPERATIONS.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts
scripts/: backup_data.py  cleanup_participant_attempts.py  export_records.py  healthcheck.py  restore_backup.py  run_dev.sh
(+113 files in other folders)
