[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interface-v2"
version = "0.1.0"
description = "Scaffold for the interface_v2 experiment platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "python-multipart",
  "pymediainfo>=7,<8",
  "gradio",
  "langchain",
  "langgraph",
  "httpx",
  "socksio",
  "argon2-cffi>=23.1,<26",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.5.0",
  "pytest",
  "pytest-asyncio",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["backend*"]
namespaces = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["."]
markers = [
  "live_weather: performs explicit live requests to the public Open-Meteo APIs",
]
